--- a/public/locales/ua/translation.json
+++ b/public/locales/ua/translation.json
@@ -4,6 +4,36 @@
      "registration" : "Реєстрація",
      "login" : "Логін",
      "news":"Новини",
-    "notices": "Знайти домашнього улюбленця",
-    "our":"Our friend"
+    "notices": "Знайти тваринку",
+    "our":"Наші друзі",
+    "next":"Далі",
+    "back":"Назад",
+   "haveAc":"У вас вже є обліковий запис?",
+       "haveAcN":"Не маєте облікового запису?",
+       "homepage":" Дбайте про своїх маленьких  улюбленців",
+        "search":"Пошук",
+          "time":"Час",
+    "phone":"Телефон",
+    "email":"Пошта",
+    "addres":"Адреса",
+     "accaunt":"Акаунт",
+      "myinfo":"Інформація про мене",
+     "mypets":"Мої тваринки",
+     "name": "Імʼя",
+     "date":"Дата народження",
+     "breed":"Порода",
+     "comments":"Коментарі",
+      "editphoto":"Додати фото",
+      "city":"Місто",
+         "brth":"Дата народження",
+           "logout": "Вийти",
+            "add":"Додати тваринку",
+             "place":"Місце",
+             "age":"Вік",
+              "price":"Ціна",
+              "learnmore":"Читати далі",
+              "delete": "Видалити"
+    
+
+             
 }
